bk_ida/gobmkida/c3/has_neighbor
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/has_neighbor/src/engine/board.c:2911:22: error: use of undeclared identifier 'byte_9C689F'
&& ( unsigned __int8)byte_9C689F[pos] != color 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/has_neighbor/src/engine/board.c:2912:22: error: use of undeclared identifier 'byte_9C688C'
&& ( unsigned __int8)byte_9C688C[pos] != color ) 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/has_neighbor/src/obj/1/board.o] Error 1
